--- a/MyNugetServer/Web.config
+++ b/MyNugetServer/Web.config
@@ -39,7 +39,14 @@
     </modules>
   <staticContent>
       <mimeMap fileExtension=".nupkg" mimeType="application/zip"/>
-    </staticContent></system.webServer><elmah>
+    </staticContent>
+  <security>
+    <ipSecurity allowUnlisted="false" denyAction="NotFound">
+      <add allowed="true" ipAddress="95.128.91.188" subnetMask="255.255.255.0"/>
+    </ipSecurity>
+  </security>
+</system.webServer>
+  <elmah>
     <!--
         See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
         more information on remote access and securing ELMAH.
