--- a/MyNugetServer/Web.config
+++ b/MyNugetServer/Web.config
@@ -43,6 +43,7 @@
   <security>
     <ipSecurity allowUnlisted="false" denyAction="NotFound">
       <add allowed="true" ipAddress="95.128.91.188" subnetMask="255.255.255.0"/>
+      <add allowed="true" ipAddress="138.91.141.243" subnetMask="255.255.255.0"/>
     </ipSecurity>
   </security>
 </system.webServer>
