move the ip restrictions to web.release.config

--- a/MyNugetServer/Web.Release.config
+++ b/MyNugetServer/Web.Release.config
@@ -28,6 +28,14 @@
       </customErrors>
     -->
   </system.web>
+  <system.webServer>
+    <security xdt:Transform="Replace">
+      <ipSecurity allowUnlisted="false" denyAction="NotFound">
+        <add allowed="true" ipAddress="95.128.91.188" subnetMask="255.255.255.0"/>
+        <add allowed="true" ipAddress="138.91.141.243" subnetMask="255.255.255.0"/>
+      </ipSecurity>
+    </security>
+  </system.webServer>
   <appSettings>
   </appSettings>
 </configuration>
