--- a/MyNugetServer/Web.config
+++ b/MyNugetServer/Web.config
@@ -30,23 +30,18 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
-<system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <modules runAllManagedModulesForAllRequests="true">
-      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler"/>
-      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler"/>
-      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler"/>
-    </modules>
-  <staticContent>
-      <mimeMap fileExtension=".nupkg" mimeType="application/zip"/>
+  <system.webServer>
+      <validation validateIntegratedModeConfiguration="false"/>
+      <modules runAllManagedModulesForAllRequests="true">
+        <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler"/>
+        <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler"/>
+        <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler"/>
+      </modules>
+    <staticContent>
+        <mimeMap fileExtension=".nupkg" mimeType="application/zip"/>
     </staticContent>
-  <security>
-    <ipSecurity allowUnlisted="false" denyAction="NotFound">
-      <add allowed="true" ipAddress="95.128.91.188" subnetMask="255.255.255.0"/>
-      <add allowed="true" ipAddress="138.91.141.243" subnetMask="255.255.255.0"/>
-    </ipSecurity>
-  </security>
-</system.webServer>
+    <security/>
+  </system.webServer>
   <elmah>
     <!--
         See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
