--- a/MyNugetServer/Web.Release.config
+++ b/MyNugetServer/Web.Release.config
@@ -31,8 +31,11 @@
   <system.webServer>
     <security xdt:Transform="Replace">
       <ipSecurity allowUnlisted="false" denyAction="NotFound">
-        <add allowed="true" ipAddress="95.128.91.188" subnetMask="255.255.255.0"/>
-        <add allowed="true" ipAddress="138.91.141.243" subnetMask="255.255.255.0"/>
+        <!-- Hinttech -->
+        <add allowed="true" ipAddress="95.128.91.0" subnetMask="255.255.255.0"/>
+        <!-- AppVeyor -->
+        <add allowed="true" ipAddress="169.54.128.0" subnetMask="255.255.248.0"/>
+        <add allowed="true" ipAddress="69.54.128.128" subnetMask="255.255.248.0"/>
       </ipSecurity>
     </security>
   </system.webServer>
