--- a/MyNugetServer/packages.config
+++ b/MyNugetServer/packages.config
@@ -9,6 +9,7 @@
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="NuGet.Core" version="2.8.6" targetFramework="net45" />
   <package id="NuGet.Server" version="2.8.6" targetFramework="net45" />
+  <package id="OctoPack" version="3.0.43" targetFramework="net45" developmentDependency="true" />
   <package id="RouteMagic" version="1.2" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.2" targetFramework="net45" />
 </packages>
