--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,9 +2,9 @@
 
 # scripts that are called at very beginning, before repo cloning
 init:
-- cmd: "set appVeyorBuildVersion=%appveyor_build_version%\necho appVeyorBuildVersion:%appVeyorBuildVersion% \n\necho repo branch:%APPVEYOR_REPO_BRANCH%\n\nset branch=%APPVEYOR_REPO_BRANCH%\necho branch:%branch%\n\nset gitVersion=%branch:~-3%\necho gitversion:%gitVersion%\n\nset version=%gitVersion%.%APPVEYOR_BUILD_NUMBER%\necho %version%\n\n"
+- cmd: "set appVeyorBuildVersion=%appveyor_build_version%\necho appVeyorBuildVersion:%appVeyorBuildVersion% \n\necho repo branch:%APPVEYOR_REPO_BRANCH%\n\nset branch=%APPVEYOR_REPO_BRANCH%\necho branch:%branch%\n\nset gitVersion=%branch:~-3%\necho gitversion:%gitVersion%\n\nset newVersion=%gitVersion%.%APPVEYOR_BUILD_NUMBER%\necho %newVersion%\n\n"
 
-version: '%version%'
+version: '{newVersion}'
 branches:
   only:
   - /release.*/
