--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,15 +2,15 @@
 
 # scripts that are called at very beginning, before repo cloning
 init:
-- echo: Info - appVeyor build version is adjusted by a script in the yml file. This also patched the Assembly version.
+- echo Info - appVeyor build version is adjusted by a script in the yml file. This also patched the Assembly version.
 - cmd: set appVeyorBuildVersion=%appveyor_build_version%
-- cmd: echo appVeyorBuildVersion:%appVeyorBuildVersion% 
+- echo appVeyorBuildVersion:%appVeyorBuildVersion% 
 - cmd: set branch=%APPVEYOR_REPO_BRANCH%
-- echo: branch:%branch%
+- echo branch:%branch%
 - cmd: set gitVersion=%branch:~-3%
-- echo: gitversion:%gitVersion%
+- echo gitversion:%gitVersion%
 - cmd: set newVersion=%gitVersion%.%APPVEYOR_BUILD_NUMBER%
-- echo: "%newVersion%"
+- echo "%newVersion%"
 - cmd: appveyor UpdateBuild -Version "%newVersion%"
 
 
