Seperate build for develop branch, without deploy (no ocotopack)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,8 @@ init:
 - cmd: appveyor UpdateBuild -Version "%newVersion%"
 
 
+# configuration for deploy candidates (release / hotfix branches)
+-
 branches:
   only:
   - /release.*/
@@ -31,3 +33,23 @@ build_script:
 - echo Building version:%appveyor_build_version%
 - cmd: nuget restore
 - cmd: msbuild /t:build /p:Configuration=Release /p:RunOctopack=true /p:OctoPackPublishPackageToHttp=http://youroctopusserverurl/nuget/packages /p:OctoPackPublishApiKey=API-key
+
+
+# configuration for checking integration builds (develop branch; without OctoPack) 
+-
+branches:
+  only:
+  - /develop.*/
+configuration: Release
+
+
+assembly_info:
+  patch: true
+  file: '**\AssemblyInfo.*'
+  assembly_version: '{version}'
+  assembly_file_version: '{version}'
+  assembly_informational_version: '{version}'
+build_script:
+- echo Building version:%appveyor_build_version%
+- cmd: nuget restore
+- cmd: msbuild /t:build /p:Configuration=Release
