added dashes to denote a list of branches

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,32 +15,32 @@ init:
 
 
 # configuration for deploy candidates (release / hotfix branches)
-branches:
+- branches:
     only:
       - /release.*/
       - /hotfix.*/
 
-configuration: Release
+   configuration: Release
 
 
-assembly_info:
-  patch: true
-  file: '**\AssemblyInfo.*'
-  assembly_version: '{version}'
-  assembly_file_version: '{version}'
-  assembly_informational_version: '{version}'
-build_script:
-- echo Building version:%appveyor_build_version%
-- cmd: nuget restore
-- cmd: msbuild /t:build /p:RunOctopack=false /p:OctoPackPublishPackageToHttp=http://youroctopusserverurl/nuget/packages /p:OctoPackPublishApiKey=API-key
+   assembly_info:
+     patch: true
+     file: '**\AssemblyInfo.*'
+     assembly_version: '{version}'
+     assembly_file_version: '{version}'
+     assembly_informational_version: '{version}'
+   build_script:
+   - echo Building version:%appveyor_build_version%
+   - cmd: nuget restore
+   - cmd: msbuild /t:build /p:RunOctopack=false /p:OctoPackPublishPackageToHttp=http://youroctopusserverurl/nuget/packages /p:OctoPackPublishApiKey=API-key
 
 
 # configuration for checking integration builds (develop branch; without OctoPack) 
-branches:
+- branches:
     only:
       - /develop.*/
 
-configuration: Debug
+   configuration: Debug
 
 
 #assembly_info:
@@ -49,7 +49,7 @@ configuration: Debug
 #  assembly_version: '{version}'
 #  assembly_file_version: '{version}'
 #  assembly_informational_version: '{version}'
-build_script:
-- echo Building version:%appveyor_build_version%
-- cmd: nuget restore
-- cmd: msbuild /t:build 
+    build_script:
+    - echo Building version:%appveyor_build_version%
+    - cmd: nuget restore
+    - cmd: msbuild /t:build 
