--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,10 @@
 
   build_script:
      - cmd: msbuild /t:build /p:Configuration=Release /p:RunOctopack=false /p:OctoPackPublishPackageToHttp=http://youroctopusserverurl/nuget/packages /p:OctoPackPublishApiKey=API-key
-
+  
+  # scripts to run before build
+  before_build:
+    nuget restore
 
 
 # configuration for checking integration builds (develop branch; without OctoPack) 
@@ -22,3 +25,6 @@
   build_script:
      - cmd: msbuild /t:build /p:Configuration=Release
 
+  # scripts to run before build
+  before_build:
+    nuget restore
