--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,17 +44,17 @@
       - /develop.*/
 
   # scripts that are called at very beginning, before repo cloning
-  init:
-  - echo Info - appVeyor build version is adjusted by a script in the yml file. This also patches the Assembly version.
-  - cmd: set appVeyorBuildVersion=%appveyor_build_version%
-  - echo appVeyorBuildVersion:%appVeyorBuildVersion% 
-  - cmd: set branch=%APPVEYOR_REPO_BRANCH%
-  - echo branch:%branch%
-  - cmd: set gitVersion=%branch:~-3%
-  - echo gitversion:%gitVersion%
-  - cmd: set newVersion=%gitVersion%.%APPVEYOR_BUILD_NUMBER%
-  - echo %newVersion%
-  - cmd: appveyor UpdateBuild -Version "%newVersion%"
+  #init:
+  #- echo Info - appVeyor build version is adjusted by a script in the yml file. This also patches the Assembly version.
+  #- cmd: set appVeyorBuildVersion=%appveyor_build_version%
+  #- echo appVeyorBuildVersion:%appVeyorBuildVersion% 
+  #- cmd: set branch=%APPVEYOR_REPO_BRANCH%
+  #- echo branch:%branch%
+  #- cmd: set gitVersion=%branch:~-3%
+  #- echo gitversion:%gitVersion%
+  #- cmd: set newVersion=%gitVersion%.%APPVEYOR_BUILD_NUMBER%
+  #- echo %newVersion%
+  #- cmd: appveyor UpdateBuild -Version "%newVersion%"
 
   assembly_info:
       patch: true
