--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,10 @@ charset = utf-8
 indent_style = space
 indent_size = 4
 
-
+# 2 space indentation
+[*.yml]
+indent_style = space
+indent_size = 2
 
 # Matches the exact files either package.json or .travis.yml
 #[{package.json,.travis.yml}]
